@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:double
    # speedY:double
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, double speedX, double speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + getLocationX():int
    + getLocationY():int
    + setLocation(double locationX, double locationY):void
    + getSpeedY():double
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractProp
{
    + AbstractProp(int locationX, int locationY, double speedX, double speedY)
    + forward():void
    + {abstract} activate(HeroAircraft heroAircraft): void
}

AbstractFlyingObject <|-- AbstractProp

class BloodProp {
    - recoverHp:int
    + BloodProp(int locationX, int locationY, double speedX, double speedY)
    + activate(HeroAircraft heroAircraft):void
}

abstract class BulletProp {
    # shootNum:int
    # shootStrategy:ShootStrategy
    # activeTime:int
    - {static} bulletPropNum:int
    + BulletProp(int locationX, int locationY, double speedX, double speedY)
    - {static} changeBulletProp(String event):void
    + recoverStraightShoot (HeroAircraft heroAircraft):void
    + activate(HeroAircraft heroAircraft):void
}


class BombProp {
    + BombProp(int locationX, int locationY, double speedX, double speedY)
    - flyingsObserverList:List<FlyingsObserver>
    + addflyingsObserver(FlyingsObserver flyingsObserver):void
    + notifyAllFlyings():void
    + activate(HeroAircraft heroAircraft):void
}


AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- BulletProp

class ScatterBulletProp {
    + ScatterBulletProp(int locationX, int locationY, double speedX, double speedY)
}

class RingBulletProp {
    + RingBulletProp(int locationX, int locationY, double speedX, double speedY)
}

BulletProp <|-- ScatterBulletProp
BulletProp <|-- RingBulletProp

@enduml